<resources>
    <string name="app_name">Notes</string>
    <string name="image">Image</string>
    <string name="save">Save</string>
    <string name="title_activity_maps">Map</string>
    <string name="delete">Delete</string>
    <string name="map">Map</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="add_files">Add Files</string>
    <string name="edit">Edit</string>
    <string name="remember">Remember</string>
    <string name="pickTime">Pick Time</string>
    <string name="pickTimeBtn">Pick Time</string>
    <string name="read_note">Read Note</string>
</resources>
