<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:onClick="setReminder"
        app:showAsAction="ifRoom"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="@string/remember" />
    <item
        android:id="@+id/mapView"
        android:orderInCategory="101"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/map" />
    <item
        android:id="@+id/delete"
        android:orderInCategory="102"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_input_delete"
        android:title="@string/delete" />

    <item
        android:id="@+id/edit"
        android:orderInCategory="103"
        app:showAsAction="ifRoom"
        android:onClick="editNote"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/edit" />

    <item
        android:orderInCategory="104"
        app:showAsAction="ifRoom"
        android:onClick="readNote"
        android:title="@string/read_note" />



</menu>
